fixed a micro visual bug that only happens on mobile devices (hopefully)

--- a/style.css
+++ b/style.css
@@ -323,6 +323,8 @@ button:hover::after {
     border: 2px solid #ccc;
     border-top-left-radius: 12px;
     border-bottom-left-radius: 12px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
     font-size: 16px;
     transition: border-color 0.3s ease-in-out;
 }
@@ -336,6 +338,8 @@ button:hover::after {
     height: 38px;
     padding: 10px;
     border: 2px solid #ccc;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
     border-top-right-radius: 12px;
     border-bottom-right-radius: 12px;
     font-size: 16px;
